--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
